# hpfeeds

appsupport/libhpfeeds/: Makefile.am  configure.ac
appsupport/libhpfeeds/include/: hpfeeds.h
appsupport/libhpfeeds/src/: hpfeeds.c
appsupport/libhpfeeds/tools/: Makefile.am  client.c
